# my_rust_cms

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  _x_old_Trunk.toml  docker-compose.yml  index.html
.cargo/: config.toml
migrations/2024-09-08-203809_create_users/: up.sql
migrations/2024-09-08-203854_create_posts/: up.sql
migrations/2024-09-08-203924_create_pages/: up.sql
migrations/2024-09-08-203955_create_media/: up.sql
migrations/2024-09-08-204032_create_categories/: up.sql
migrations/2024-09-08-204043_create_templates/: up.sql
migrations/2024-09-08-204106_create_builder_components/: up.sql
migrations/2024-09-08-204127_create_settings/: up.sql
migrations/2024-09-08-204535_create_comments/: up.sql
migrations/2024-09-08-204546_create_sessions/: up.sql
migrations/2024-09-08-204613_create_page_sections/: up.sql
migrations/2024-09-08-204655_create_components/: up.sql
migrations/2024-09-08-204706_create_page_components/: up.sql
migrations/2024-09-08-204727_create_component_styles/: up.sql
migrations/2024-09-08-204810_create_component_events/: up.sql
src/: lib.rs  main.rs
src/backend/: lib.rs  main.rs
src/backend/config/: config.rs  database.rs
src/backend/controllers/: auth_controller.rs  builder_controller.rs  category_controller.rs  comments_controller.rs  media_controller.rs  mod.rs  posts_controller.rs  settings_controller.rs  users_controller.rs
src/backend/middlewares/: auth_middleware.rs  cors_middleware.rs  logging_middleware.rs
src/backend/models/: category.rs  comment.rs  media.rs  mod.rs  page.rs  post.rs  settings.rs  tag.rs  user.rs
src/backend/repositories/: category_repository.rs  comment_repository.rs  media_repository.rs  page_repository.rs  tag_repository.rs  user_repository.rs
src/backend/services/: auth_service.rs  builder_service.rs  comment_service.rs  media_service.rs  mod.rs  post_service.rs  user_service.rs
src/frontend/: lib.rs  main.rs  mod.rs
src/frontend/components/: comment_item.rs  footer.rs  header.rs  login_page.rs  main_app.rs  mod.rs  post_explorer.rs  post_item.rs  sidebar.rs  tabbed_view.rs
src/frontend/components/builder/: editor.rs  module.rs  preview.rs  toolbox.rs
src/frontend/pages/: comment_moderation.rs  dashboard.rs  login.rs  media_library.rs  page_builder.rs  post_editor.rs  post_list.rs  settings.rs  user_management.rs
src/frontend/services/: api_service.rs  mod.rs
src/frontend/styles/: builder.css  main.css  theme.css
src/frontend/templates/: category_template.rs  page_template.rs  post_template.rs  tag_template.rs
src/shared/: constants.rs  types.rs  utils.rs
src/tests/: integration_tests.rs  network_test.rs  unit_tests.rs
tests/: integration_tests.rs  unit_tests.rs
