[package]
name = "my_rust_cms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew framework
yew = { version = "0.20", features = ["csr"] }

# Yew Router for client-side routing
yew-router = "0.17"

# Serialization and WebAssembly bindings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.2"
wasm-bindgen = "0.2"
thiserror = "1.0"

# Other utilities for your CMS (optional)
async-trait = "0.1"
jsonwebtoken = "8.1"
dotenv = { version = "0.15", optional = true }
bcrypt = { version = "0.9", optional = true }

[features]
default = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = { version = "0.15" }
bcrypt = { version = "0.9" }

[dev-dependencies]
trunk = "0.15.0"
wasm-bindgen-test = "0.3"