[package]
name = "my_rust_cms"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yew framework
yew = { version = "0.20", features = ["csr"] }

# Yew Router for client-side routing
yew-router = { version = "0.18" }

# Serialization and WebAssembly bindings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.2"

# WebAssembly utilities
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document"] }
js-sys = "0.3"

# Gloo for networking, console, and storage utilities
gloo-net = "0.3"
gloo-storage = "0.3"
gloo = { version = "0.8", features = ["utils", "net", "storage"] }

# Async utilities and logging
log = "0.4"

# wasm-bindgen-futures for async in WASM
wasm-bindgen-futures = "0.4"

# Error handling
thiserror = "1.0"

[features]
default = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "0.15"
bcrypt = "0.9"
jsonwebtoken = "8.1"
async-trait = "0.1"

[dev-dependencies]
trunk = "0.15.0"
wasm-bindgen-test = "0.3"
